<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/activity_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/sign_up_padding"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true">

        <ImageView
            android:layout_width="@dimen/sign_logo_width_and_height"
            android:layout_height="@dimen/sign_logo_width_and_height"
            android:layout_gravity="center"
            android:contentDescription="@string/content_description_ic_logo"
            android:layout_margin="@dimen/sign_up_margin"
            android:src="@drawable/elmastaba_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_up_string"
            android:textColor="@color/textColorWhite"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/sign_left_and_right_padding">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_description_person_ic"
                android:src="@mipmap/ic_person_white" />

            <EditText
                android:id="@+id/sign_up_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/backgroundColorWhite"
                android:hint="@string/username_hint_text"
                android:textColor="@color/colorPrimaryText"
                android:textAppearance="?android:textAppearanceMedium"
                android:paddingLeft="@dimen/sign_up_username_edit_text_padding_left_and_right"
                android:paddingRight="@dimen/sign_up_username_edit_text_padding_left_and_right"
                android:maxLength="16" />

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/sign_left_and_right_padding">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_description_email_ic"
                android:src="@mipmap/ic_mail_white" />

            <EditText
                android:id="@+id/sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/backgroundColorWhite"
                android:hint="@string/email_hint_text"
                android:textColor="@color/colorPrimaryText"
                android:textAppearance="?android:textAppearanceMedium"
                android:paddingLeft="@dimen/sign_up_email_edit_text_padding_left_and_right"
                android:paddingRight="@dimen/sign_up_email_edit_text_padding_left_and_right"
                android:inputType="textEmailAddress"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/sign_left_and_right_padding">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_description_lock_ic"
                android:src="@mipmap/ic_lock_white" />

            <EditText
                android:id="@+id/sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/backgroundColorWhite"
                android:hint="@string/password_hint_text"
                android:textColor="@color/colorPrimaryText"
                android:textAppearance="?android:textAppearanceMedium"
                android:inputType="textPassword"
                android:paddingLeft="@dimen/sign_left_and_right_padding"
                android:paddingRight="@dimen/sign_left_and_right_padding"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/sign_left_and_right_padding">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_description_birthday_cake_ic"
                android:src="@mipmap/ic_birth_day_white" />

            <EditText
                android:id="@+id/sign_up_birthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="date"
                android:background="@color/backgroundColorWhite"
                android:hint="@string/birth_day_hint_text"
                android:textColor="@color/colorPrimaryText"
                android:textAppearance="?android:textAppearanceMedium"
                android:paddingLeft="@dimen/sign_up_username_edit_text_padding_left_and_right"
                android:paddingRight="@dimen/sign_up_username_edit_text_padding_left_and_right"
                android:maxLength="16" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/sign_left_and_right_padding">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_description_home_ic"
                android:src="@mipmap/ic_address_whie" />

            <EditText
                android:id="@+id/sign_up_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/backgroundColorWhite"
                android:hint="@string/address_hint_text"
                android:textColor="@color/colorPrimaryText"
                android:textAppearance="?android:textAppearanceMedium"
                android:paddingLeft="@dimen/sign_up_username_edit_text_padding_left_and_right"
                android:paddingRight="@dimen/sign_up_username_edit_text_padding_left_and_right"
                android:maxLength="16" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/sign_left_and_right_padding">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/content_description_mobile_ic"
                android:src="@mipmap/ic_phone_white" />

            <EditText
                android:id="@+id/sign_up_mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:inputType="datetime"
                android:background="@color/backgroundColorWhite"
                android:hint="@string/mobile_hint_text"
                android:textColor="@color/colorPrimaryText"
                android:textAppearance="?android:textAppearanceMedium"
                android:paddingLeft="@dimen/sign_up_username_edit_text_padding_left_and_right"
                android:paddingRight="@dimen/sign_up_username_edit_text_padding_left_and_right"
                android:maxLength="16" />

        </LinearLayout>

        <Button
            android:id="@+id/sign_up_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/sign_up_button_top_margin"
            android:text="@string/sign_up_string"
            android:background="@drawable/sign_button_shape"
            android:textColor="@color/colorPrimaryText"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceMedium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingTop="@dimen/sign_up_margin">

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="@color/backgroundColorWhite" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/sign_or_left_right_margin"
                android:layout_marginRight="@dimen/sign_or_left_right_margin"
                android:text="@string/or_string"
                android:textStyle="bold"
                android:textColor="@color/textColorWhite"
                android:textAppearance="?android:textAppearanceMedium" />

            <View
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_weight="1"
                android:background="@color/backgroundColorWhite" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="@dimen/sign_up_with_padding_top"
            android:text="@string/sign_up_with_text"
            android:textStyle="bold"
            android:textColor="@color/textColorWhite"
            android:textAppearance="?android:textAppearanceMedium" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/google_signup_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/sign_with_gmail_button_margin"
                android:contentDescription="@string/content_description_google_ic"
                android:background="@color/backgroundColorWhite"
                android:src="@drawable/google200" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/have_account_text"
                android:textColor="@color/textColorWhite"
                android:textAppearance="?android:textAppearanceMedium" />

            <TextView
                android:id="@+id/go_to_sign_in"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_string"
                android:textStyle="bold"
                android:textColor="@color/textColorWhite"
                android:textAppearance="?android:textAppearanceMedium" />

        </LinearLayout>

    </LinearLayout>


</ScrollView>
