<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/create_room_margin_left_top"
        android:layout_marginStart="@dimen/create_room_margin_left_top"
        android:layout_marginTop="@dimen/create_room_margin_left_top"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/my_profile_image"
            android:layout_width="@dimen/create_room_image_width_height"
            android:layout_height="@dimen/create_room_image_width_height"
            android:src="@drawable/ic_add_white_24dp"
            android:contentDescription="@string/content_description_plus_ic"
            android:background="@color/colorPrimary"
            android:clickable="true"
            android:stateListAnimator="@animator/image_button_animtor"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/my_profile_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/create_room_name_password_edit_text_height"
                android:layout_marginTop="@dimen/create_room_name_margin_top"
                android:layout_marginLeft="@dimen/create_room_name_margin_left"
                android:layout_marginStart="@dimen/create_room_name_margin_left"
                android:layout_marginRight="@dimen/create_room_name_margin_right"
                android:layout_marginEnd="@dimen/create_room_name_margin_right"
                android:gravity="start"
                android:hint="@string/create_room_name_text"
                android:inputType="textCapSentences"
                android:maxLength="20"
                android:maxLines="1"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

            <EditText
                android:id="@+id/my_profile_address_edit_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/create_room_name_password_edit_text_height"
                android:layout_margin="@dimen/create_room_password_margin"
                android:inputType="textCapSentences"
                android:gravity="start"
                android:hint="@string/address_hint_text"
                android:maxLength="16"
                android:maxLines="1"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

            <EditText
                android:id="@+id/my_profile_birthday_date_edit_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/create_room_name_password_edit_text_height"
                android:layout_margin="@dimen/create_room_password_margin"
                android:gravity="start"
                android:inputType="date"
                android:hint="@string/birth_day_hint_text"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>


            <EditText
                android:id="@+id/my_profile_mobile_edit_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/create_room_name_password_edit_text_height"
                android:layout_margin="@dimen/create_room_password_margin"
                android:gravity="start"
                android:inputType="number"
                android:hint="@string/mobile_hint_text"
                android:maxLength="20"
                android:maxLines="1"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>

            <Button
                android:id="@+id/my_profile_save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/colorPrimary"
                android:text="@string/create_room_save_text_button"
                android:textColor="@color/textColorWhite"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"/>


        </LinearLayout>

    </LinearLayout>

</ScrollView>